--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -11,10 +11,9 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/barchart": "^0.3.0",
+    "@seine/charts": "^0.3.0",
     "@seine/core": "^0.3.0",
-    "@seine/draft": "^0.3.0",
-    "@seine/pie": "^0.3.0"
+    "@seine/draft": "^0.3.0"
   },
   "peerDependencies": {
     "react": "^16.8.6",
