--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,6 +11,7 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.4.2",
     "@seine/core": "^0.3.0",
     "clsx": "^1.0.4"
   },
