--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -11,17 +11,14 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/barchart-editor": "^0.3.0",
+    "@seine/charts-editor": "^0.3.0",
     "@seine/core": "^0.3.0",
     "@seine/draft": "^0.3.0",
     "@seine/draft-editor": "^0.3.0",
-    "@seine/pie": "^0.3.0",
-    "@seine/pie-editor": "^0.3.0",
     "@seine/ui": "^0.3.0"
   },
   "peerDependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
   }
 }
