--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seine/content",
-  "version": "0.3.15",
+  "version": "0.3.16",
   "description": "Seine content renderer.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -11,10 +11,9 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/barchart": "^0.3.0",
+    "@seine/charts": "^0.3.0",
     "@seine/core": "^0.3.0",
-    "@seine/draft": "^0.3.0",
-    "@seine/pie": "^0.3.0"
+    "@seine/draft": "^0.3.0"
   },
   "peerDependencies": {
     "react": "^16.8.6",
