--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seine/ui",
-  "version": "0.3.14",
+  "version": "0.3.15",
   "description": "Seine UI library.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -11,6 +11,7 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.4.2",
     "@seine/core": "^0.3.0",
     "clsx": "^1.0.4"
   },
