--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,27 +1,30 @@
 stages:
-  - publish
+  - test
+  - build
+  - build-stable
 
-publish:
-  only: [master]
-  stage: publish
-  image: node:10-alpine
-  cache:
-    key: "$CI_JOB_STAGE"
-    paths:
-      - /var/cache/apk/
-      - .yarn-cache/
-  artifacts:
-    name: "$CI_COMMIT_SHORT_SHA"
-    paths: [yarn-error.log]
+test:
+  stage: test
+  image: node:8-alpine
   before_script:
-    - apk update
-    - apk upgrade
-    - apk add git
-    - yarn
-    - yarn config set cache-folder .yarn-cache
-    - npm set //registry.npmjs.org/:_authToken "$NPM_TOKEN"
+    - yarn install
   script:
-    - yarn workspaces run publish --non-interactive --access public --patch --no-commit-hooks --no-git-tag-version
-  after_script:
-    - npm config delete //registry.npmjs.org/:_authToken
-    - yarn logout
+    - yarn test
+
+build:
+  only:
+    - tags
+  stage: build
+  image: docker:stable
+  services:
+    - docker:dind
+  variables:
+    IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
+    RELEASE_IMAGE_TAG: $CI_REGISTRY_IMAGE:latest
+  before_script:
+    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
+  script:
+    - docker build -t $IMAGE_TAG .
+    - docker tag $IMAGE_TAG $RELEASE_IMAGE_TAG
+    - docker push $IMAGE_TAG
+    - docker push $RELEASE_IMAGE_TAG
