--- a/packages/draft/package.json
+++ b/packages/draft/package.json
@@ -18,6 +18,7 @@
   "peerDependencies": {
     "draft-js": "^0.11.0",
     "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
   }
 }
