--- a/packages/draft/package.json
+++ b/packages/draft/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seine/draft",
-  "version": "0.3.15",
+  "version": "0.3.16",
   "description": "Seine draft.js renderer.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -18,6 +18,7 @@
   "peerDependencies": {
     "draft-js": "^0.11.0",
     "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
   }
 }
