--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "draft-js": "^0.11.0",
     "react": "^16.8.6",
+    "serve": "^11.1.0",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
