--- a/packages/charts-editor/package.json
+++ b/packages/charts-editor/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@seine/charts": "^0.3.0",
     "@seine/core": "^0.3.0",
-    "@seine/ui": "^0.3.0"
+    "@seine/ui": "^0.3.0",
+    "react-color": "^2.17.3"
   },
   "peerDependencies": {
     "react": "^16.8.6",
