--- a/packages/charts-editor/package.json
+++ b/packages/charts-editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seine/charts-editor",
-  "version": "0.3.20",
+  "version": "0.3.22",
   "description": "Seine charts editor.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -13,7 +13,8 @@
   "dependencies": {
     "@seine/charts": "^0.3.0",
     "@seine/core": "^0.3.0",
-    "@seine/ui": "^0.3.0"
+    "@seine/ui": "^0.3.0",
+    "react-color": "^2.17.3"
   },
   "peerDependencies": {
     "react": "^16.8.6",
