--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
+    "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.4.3",
     "@storybook/addon-actions": "^5.2.0",
     "@storybook/addon-storyshots": "^5.2.0",
     "@storybook/addons": "^5.2.0",
@@ -60,7 +62,6 @@
     "jest-pnp-resolver": "^1.2.1",
     "jest-resolve": "^24.9.0",
     "minimist": "^1.2.0",
-    "muicss": "^0.9.43",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "ramda": "^0.26.1",
