--- a/packages/draft-editor/package.json
+++ b/packages/draft-editor/package.json
@@ -14,6 +14,7 @@
     "@seine/core": "^0.3.0",
     "@seine/draft": "^0.3.0",
     "@seine/ui": "^0.3.0",
+    "clsx": "^1.0.4",
     "draft-js-buttons": "^2.0.2"
   },
   "peerDependencies": {
