--- a/packages/draft/package.json
+++ b/packages/draft/package.json
@@ -12,8 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@seine/core": "^0.3.0",
-    "clsx": "^1.0.4",
-    "recompose": "^0.30.0"
+    "clsx": "^1.0.4"
   },
   "peerDependencies": {
     "draft-js": "^0.11.0",
