--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,8 +11,7 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/core": "^0.3.0",
-    "clsx": "^1.0.4"
+    "@seine/core": "^0.3.0"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.5.0",
