--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
-    "@material-ui/core": "^4.5.0",
-    "@material-ui/icons": "^4.4.3",
+    "@material-ui/core": "^4.3.3",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.3.3",
     "@storybook/addon-actions": "^5.2.0",
     "@storybook/addon-storyshots": "^5.2.0",
     "@storybook/addons": "^5.2.0",
