--- a/packages/charts-editor/package.json
+++ b/packages/charts-editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seine/charts-editor",
-  "version": "0.3.40",
+  "version": "0.3.42",
   "description": "Seine charts editor.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -18,6 +18,7 @@
   },
   "peerDependencies": {
     "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
   }
 }
