--- a/packages/charts-editor/package.json
+++ b/packages/charts-editor/package.json
@@ -17,6 +17,7 @@
     "react-color": "^2.17.3"
   },
   "peerDependencies": {
+    "@material-ui/core": "^4.3.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
