--- a/packages/charts-editor/package.json
+++ b/packages/charts-editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seine/charts-editor",
-  "version": "0.3.47",
+  "version": "0.3.51",
   "description": "Seine charts editor.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -17,6 +17,7 @@
     "react-color": "^2.17.3"
   },
   "peerDependencies": {
+    "@material-ui/core": "^4.3.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
