--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@seine/charts-editor": "^0.3.0",
     "@seine/core": "^0.3.0",
+    "@seine/content": "^0.3.0",
     "@seine/draft": "^0.3.0",
     "@seine/draft-editor": "^0.3.0",
     "@seine/ui": "^0.3.0"
