--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seine/editor",
-  "version": "0.3.51",
+  "version": "0.3.55",
   "description": "Seine structured content renderer.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@seine/charts-editor": "^0.3.0",
+    "@seine/content": "^0.3.0",
     "@seine/core": "^0.3.0",
     "@seine/draft": "^0.3.0",
     "@seine/draft-editor": "^0.3.0",
