--- a/packages/charts-editor/package.json
+++ b/packages/charts-editor/package.json
@@ -18,6 +18,8 @@
   },
   "peerDependencies": {
     "@material-ui/core": "^4.3.3",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
