--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "dev:start": "start-storybook -p 9009 -s public"
   },
   "dependencies": {
-    "@material-ui/core": "^4.3.3",
-    "@material-ui/icons": "^4.3.3",
+    "@material-ui/core": "^4.2.1",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.2.1",
     "draft-js": "^0.11.0",
     "gh-pages": "^2.1.1",
     "react": "^16.8.6",
@@ -86,19 +87,14 @@
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-visualizer": "^2.5.4"
   },
-  "workspaces": {
-    "packages": [
-      "packages/core",
-      "packages/ui",
-      "packages/draft",
-      "packages/charts",
-      "packages/content",
-      "packages/draft-editor",
-      "packages/charts-editor",
-      "packages/editor"
-    ],
-    "nohoist": [
-      "packages/*/@material-ui/core/**"
-    ]
-  }
+  "workspaces": [
+    "packages/core",
+    "packages/ui",
+    "packages/draft",
+    "packages/charts",
+    "packages/content",
+    "packages/draft-editor",
+    "packages/charts-editor",
+    "packages/editor"
+  ]
 }
