--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seine/ui",
-  "version": "0.3.59",
+  "version": "0.3.67",
   "description": "Seine UI library.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -14,9 +14,9 @@
     "@seine/core": "^0.3.0"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.3.3",
+    "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
-    "jss": "^10.0.0",
+    "@material-ui/styles": "^4.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
