--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jest": "^24.9.0",
     "jest-pnp-resolver": "^1.2.1",
     "jest-resolve": "^24.9.0",
+    "lodash": "^4.17.15",
     "minimist": "^1.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
@@ -96,5 +97,10 @@
     "packages/draft-editor",
     "packages/charts-editor",
     "packages/editor"
-  ]
+  ],
+  "babelMacros": {
+    "styledComponents": {
+      "pure": true
+    }
+  }
 }
