--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -16,6 +16,9 @@
     "@seine/draft": "^0.3.0"
   },
   "peerDependencies": {
+    "@material-ui/core": "^4.2.1",
+    "@material-ui/styles": "^4.2.1",
+    "@material-ui/utils": "^4.2.1",
     "react": "^16.8.6",
     "styled-components": "^4.3.2"
   }
