--- a/packages/charts/package.json
+++ b/packages/charts/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@seine/core": "^0.3.0",
+    "@seine/ui": "^0.3.0",
     "ramda": "^0.26.1"
   },
   "peerDependencies": {
