--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -16,6 +16,7 @@
     "@seine/core": "^0.3.0",
     "@seine/draft": "^0.3.0",
     "@seine/draft-editor": "^0.3.0",
+    "@seine/styles": "^0.3.0",
     "@seine/ui": "^0.3.0"
   },
   "peerDependencies": {
