--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@seine/charts-editor",
+  "name": "@seine/styles",
   "version": "0.3.90",
-  "description": "Seine charts editor.",
+  "description": "Seine styles library.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
   "files": [
@@ -10,16 +10,9 @@
   "repository": "redchiliorg/seine",
   "author": "Mikhail Boyarov",
   "license": "MIT",
-  "dependencies": {
-    "@seine/charts": "^0.3.0",
-    "@seine/core": "^0.3.0",
-    "@seine/ui": "^0.3.0",
-    "react-color": "^2.17.3"
-  },
   "peerDependencies": {
     "@material-ui/core": "^4.2.1",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/styles": "^4.2.1",
+    "@material-ui/utils": "^4.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
