--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^9.0.1",
+    "cross-env": "^6.0.3",
+    "cypress": "^3.8.1",
     "draft-js": "^0.11.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.0.0",
