--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test:jest": "jest",
     "dev": "run-s dev:*",
     "dev:start": "start-storybook -p 3000 -s public",
-    "cypress:open": "cross-env NODE_ENV=development cypress open -c baseUrl=http://localhost:3000"
+    "cypress:open": "cross-env NODE_ENV=development cypress open"
   },
   "dependencies": {
     "@material-ui/core": "^4.2.1",
