--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test:eslint": "eslint -c .eslintrc.js --format unix packages/*/src",
     "test:jest": "jest",
     "dev": "run-s dev:*",
-    "dev:start": "start-storybook -p 9009 -s public"
+    "dev:start": "start-storybook -p 3000 -s public",
+    "cypress:open": "cross-env NODE_ENV=development cypress open"
   },
   "dependencies": {
     "@material-ui/core": "^4.2.1",
@@ -52,10 +53,13 @@
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^9.0.1",
+    "cross-env": "^6.0.3",
+    "cypress": "^3.8.1",
     "draft-js": "^0.11.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-react-app": "^5.0.1",
+    "eslint-plugin-cypress": "^2.8.1",
     "eslint-plugin-flowtype": "^4.2.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsdoc": "^15.12.0",
