--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seine/content",
-  "version": "0.3.123",
+  "version": "0.3.130",
   "description": "Seine content renderer.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -14,7 +14,8 @@
     "@seine/charts": "^0.3.0",
     "@seine/core": "^0.3.0",
     "@seine/draft": "^0.3.0",
-    "@seine/styles": "^0.3.0"
+    "@seine/styles": "^0.3.0",
+    "@seine/tables": "^0.3.0"
   },
   "peerDependencies": {
     "react": "^16.8.6",
