--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -10,12 +10,14 @@
   "repository": "redchiliorg/seine",
   "author": "Mikhail Boyarov",
   "license": "MIT",
+  "dependencies": {
+    "resize-observer-polyfill": "^1.5.1"
+  },
   "peerDependencies": {
     "@material-ui/core": "^4.2.1",
     "@material-ui/utils": "^4.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^4.3.2"
   }
 }
