--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seine/styles",
-  "version": "0.3.139",
+  "version": "0.3.141",
   "description": "Seine styles library.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -10,6 +10,9 @@
   "repository": "redchiliorg/seine",
   "author": "Mikhail Boyarov",
   "license": "MIT",
+  "dependencies": {
+    "resize-observer-polyfill": "^1.5.1"
+  },
   "peerDependencies": {
     "@material-ui/core": "^4.2.1",
     "@material-ui/utils": "^4.2.1",
