seine-1 carp#269 Если вставляем текст в ячейки для таблиц, автоматически не переносится

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "richtext"
   ],
   "private": true,
-  "repository": "redchiliorg/seine",
+  "repository": "mi6gan/seine",
   "license": "MIT",
   "scripts": {
     "predeploy": "npm run build",
