seine-3 Добавить выравнивания текста для titles в таблицах

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "scripts": {
     "predeploy": "npm run build",
+    "deploy": "run-s release",
     "start": "serve",
     "build": "build-storybook -o dist",
     "release": "run-s release:*",
