--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "cypress:open": "cross-env NODE_ENV=development cypress open"
   },
   "dependencies": {
-    "@material-ui/core": "^4.2.1",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/styles": "^4.2.1",
-    "@material-ui/utils": "^4.5.2",
+    "@material-ui/core": "4.5",
+    "@material-ui/icons": "4.5",
+    "@material-ui/styles": "4.5",
+    "@material-ui/utils": "4.5",
     "draft-js": "^0.11.0",
     "gh-pages": "^2.1.1",
     "react": "^16.9.0",
