seine-144 bream#757 Выровнять Items по одному стандарту

--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -17,6 +17,7 @@
     "@seine/draft": "^0.3.0",
     "@seine/draft-editor": "^0.3.0",
     "@seine/styles": "^0.3.0",
+    "@seine/tables": "^0.3.0",
     "@seine/tables-editor": "^0.3.0",
     "@seine/ui": "^0.3.0"
   },
