--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seine/styles",
-  "version": "0.3.169",
+  "version": "0.3.170",
   "description": "Seine styles library.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -11,8 +11,8 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "resize-observer-polyfill": "^1.5.1",
-    "@material-ui/core": "^4.2.1"
+    "@material-ui/core": "^4.2.1",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "peerDependencies": {
     "@material-ui/utils": "^4.2.1",
