--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -11,11 +11,11 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@material-ui/core": "^4.2.1",
+    "@material-ui/core": "4.5",
     "resize-observer-polyfill": "^1.5.1"
   },
   "peerDependencies": {
-    "@material-ui/utils": "^4.2.1",
+    "@material-ui/utils": "4.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
