--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seine/editor",
-  "version": "0.3.166",
+  "version": "0.3.170",
   "description": "Seine structured content renderer.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -17,6 +17,7 @@
     "@seine/draft": "^0.3.0",
     "@seine/draft-editor": "^0.3.0",
     "@seine/styles": "^0.3.0",
+    "@seine/tables": "^0.3.0",
     "@seine/tables-editor": "^0.3.0",
     "@seine/ui": "^0.3.0"
   },
