custom travis ci deploy script

--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "license": "MIT",
   "scripts": {
     "start": "serve",
+    "postinstall": "yarn workspaces run",
     "build": "run-s build:*",
     "build:cjs": "node scripts/build.js --format=cjs",
     "build:esm": "node scripts/build.js -format=esm",
-    "release": "run-s build:* release:*",
-    "release:publish": "node scripts/publish.js",
-    "test": "run-s test:*",
+    "release": "node scripts/publish.js",
+    "test": "run-s build:* test:*",
     "test:eslint": "eslint -c .eslintrc.js --format unix packages/*/src",
     "test:jest": "jest",
     "dev": "run-s dev:*",
