--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:eslint": "eslint -c .eslintrc.js --format unix packages/*/src",
     "test:jest": "jest",
     "dev": "run-s dev:*",
-    "dev:start": "start-storybook -p 3000 -s public"
+    "dev:start": "start-storybook -p 3000 -s public",
+    "postversion": "git tag -a ${npm_package_version} -m \"Release ${npm_package_version}\""
   },
   "dependencies": {
     "@material-ui/core": "4.5",
