custom travis ci deploy script

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ deploy:
 
 after_deploy:
 - git remote set-url origin git@github.com:mi6gan/seine.git
-- git push origin HEAD:latest
+- git push -u origin HEAD:latest
 
 env:
   global:
