--- a/packages/charts-editor/package.json
+++ b/packages/charts-editor/package.json
@@ -20,10 +20,10 @@
     "virtual-dom-stringify": "^3.0.1"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.2.1",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/styles": "^4.2.1",
-    "@material-ui/utils": "^4.2.1",
+    "@material-ui/core": "4.5",
+    "@material-ui/icons": "4.5",
+    "@material-ui/styles": "4.5",
+    "@material-ui/utils": "4.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
