--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -22,10 +22,10 @@
     "@seine/ui": "^0.3.0"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.2.1",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/styles": "^4.2.1",
-    "@material-ui/utils": "^4.2.1",
+    "@material-ui/core": "4.5",
+    "@material-ui/icons": "4.5",
+    "@material-ui/styles": "4.5",
+    "@material-ui/utils": "4.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
