--- a/packages/draft/package.json
+++ b/packages/draft/package.json
@@ -11,7 +11,7 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/core": "^0.3.0",
+    "@seine/core": "next",
     "clsx": "^1.0.4",
     "draft-js": "^0.11.0"
   },
