--- a/packages/charts-editor/package.json
+++ b/packages/charts-editor/package.json
@@ -11,10 +11,10 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/charts": "^0.3.0",
-    "@seine/core": "^0.3.0",
-    "@seine/styles": "^0.3.0",
-    "@seine/ui": "^0.3.0",
+    "@seine/charts": "next",
+    "@seine/core": "next",
+    "@seine/styles": "next",
+    "@seine/ui": "next",
     "react-color": "^2.17.3",
     "svg-patterns": "^1.0.0",
     "virtual-dom-stringify": "^3.0.1"
