--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -11,11 +11,11 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/charts": "^0.3.0",
-    "@seine/core": "^0.3.0",
-    "@seine/draft": "^0.3.0",
-    "@seine/styles": "^0.3.0",
-    "@seine/tables": "^0.3.0"
+    "@seine/charts": "next",
+    "@seine/core": "next",
+    "@seine/draft": "next",
+    "@seine/styles": "next",
+    "@seine/tables": "next"
   },
   "peerDependencies": {
     "react": "^16.8.6",
