--- a/packages/draft-editor/package.json
+++ b/packages/draft-editor/package.json
@@ -11,9 +11,9 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/core": "^0.3.0",
-    "@seine/draft": "^0.3.0",
-    "@seine/ui": "^0.3.0",
+    "@seine/core": "next",
+    "@seine/draft": "next",
+    "@seine/ui": "next",
     "clsx": "^1.0.4",
     "draft-js-buttons": "^2.0.2"
   },
