--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -11,6 +11,8 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/styles": "4.5",
+    "@seine/charts": "next",
     "@seine/charts-editor": "next",
     "@seine/content": "next",
     "@seine/core": "next",
@@ -23,8 +25,6 @@
   },
   "peerDependencies": {
     "@material-ui/core": "4.5",
-    "@material-ui/icons": "4.5",
-    "@material-ui/styles": "4.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
