--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,11 +11,12 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/core": "next"
+    "@seine/core": "next",
+    "@seine/styles": "next"
   },
   "peerDependencies": {
-    "@material-ui/core": "4.5",
-    "@material-ui/icons": "4.5",
+    "@material-ui/core": "4.9",
+    "@material-ui/icons": "4.9",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
