--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "serve",
     "postversion": "git commit -am \"Release ${npm_package_version}\"",
     "release": "run-s release:*",
-    "release:publish": "node scripts/publish.js --tag=next",
+    "release:publish": "node scripts/publish.js",
     "release:version": "yarn version --patch",
     "release:postversion": "yarn postversion",
     "test": "run-s build:* test:*",
