--- a/packages/tables-editor/package.json
+++ b/packages/tables-editor/package.json
@@ -11,10 +11,10 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/core": "next",
-    "@seine/styles": "next",
-    "@seine/tables": "next",
-    "@seine/ui": "next",
+    "@seine/core": "0.3",
+    "@seine/styles": "0.3",
+    "@seine/tables": "0.3",
+    "@seine/ui": "0.3",
     "react-color": "^2.17.3"
   },
   "peerDependencies": {
