fix storybook build

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "run-s build:*",
     "build:cjs": "node scripts/build.js --format=cjs",
     "build:esm": "node scripts/build.js -format=esm",
-    "dist:build": "yarn build-storybook --quiet --loglevel silent -o dist",
+    "build:storybook": "yarn build-storybook --quiet --loglevel silent -o dist",
     "dev": "run-s dev:*",
     "dev:start": "start-storybook -p 3000 -s public",
     "postinstall": "yarn workspaces run"
