--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build:esm": "node scripts/build.js -format=esm",
     "build:storybook": "yarn build-storybook --quiet --loglevel silent -o dist",
     "dev": "run-s dev:*",
-    "dev:start": "start-storybook -p 3000 -s public",
+    "dev:start": "start-storybook -p 3000",
     "postinstall": "yarn workspaces run"
   },
   "dependencies": {
