--- a/package.json
+++ b/package.json
@@ -12,19 +12,17 @@
   "license": "MIT",
   "scripts": {
     "start": "serve",
-    "postversion": "run-s postversion:*",
-    "postversion:git": "run-s postversion:git:*",
-    "postversion:git:commit": "git commit -am \"Release ${npm_package_version}\"",
-    "postversion:git:push": "git push -f origin HEAD:latest",
-    "postversion:docker": "run-s postversion:docker:*",
-    "postversion:docker:build": "docker build -t mi6gan/seine:${npm_package_version} .",
-    "postversion:docker:tag": "docker tag mi6gan/seine:${npm_package_version} mi6gan:seine:latest",
-    "postversion:docker:version": "docker push mi6gan/seine:${npm_package_version}",
-    "postversion:docker:latest": "docker push mi6gan/seine:latest",
-    "deploy": "run-s deloy:*",
-    "deploy:publish": "node scripts/publish.js",
-    "deploy:version": "yarn version --patch",
-    "deploy:postversion": "yarn postversion",
+    "show": "echo ${npm_package_version}",
+    "deploy": "run-s deploy:version:* deploy:latest",
+    "deploy:version:tag": "docker build -t mi6gan/seine:${npm_package_version} .",
+    "deploy:version:push": "docker push mi6gan/seine:${npm_package_version}",
+    "deploy:latest:tag": "docker tag mi6gan/seine:${npm_package_version} mi6gan:seine:latest",
+    "deploy:latest:push": "docker push mi6gan/seine:latest",
+    "release": "run-s release:*",
+    "release:publish": "node scripts/publish.js",
+    "release:version": "yarn version --patch",
+    "release:commit": "git commit -am \"Release ${npm_package_version}\"",
+    "release:push": "git push -f origin HEAD:latest",
     "test": "run-s build:* test:*",
     "test:eslint": "eslint -c .eslintrc.js --format unix packages/*/src",
     "test:jest": "jest",
